--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Shawshank Prevention</title>
   </head>
   <body>
-    Hello, person - welcome to this place.
+    <h1>Hello, person - welcome to this place.</h1>
 
   </body>
 </html>
