--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hello, person - welcome to this place.</h1>
-
+    <a href="http://hristu.net/" target="_blank"></a>
   </body>
 </html>
