--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <div class="spaces">
     <h1>Hello, person - welcome to this place.</h1>
     <br />
-    <a href="http://hristu.net/" target="_blank">this is a link right?</a>
-    </div>
-    <img src="http://www.fishmech.net/Macros/Oh%20Snap/ohsnap.jpg" alt="oh snap!" />
+    <a href="http://hristu.net/" target="_blank"><img src="http://www.fishmech.net/Macros/Oh%20Snap/ohsnap.jpg" alt="oh snap!" /></a>
+  </div>
     <h4>Celebration ensues after end of glue shortage.</h4>
     <p>
       Tianjin Climate Exchange (TCX) is a domestic carbon market cap-and-trade scheme exchange. Jeff Huang is assistant chairman of Tianjin Climate Exchange and vice-president of Chicago Climate Exchange.
