--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Shawshank Prevention</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="spaces">
     <h1>Hello, person - welcome to this place.</h1>
     <br />
-    <a href="http://hristu.net/" target="_blank"><img src="http://www.fishmech.net/Macros/Oh%20Snap/ohsnap.jpg" alt="oh snap!" /></a>
+    <a href="http://hristu.net/" target="_blank"><img src="http://www.fishmech.net/Macros/Oh%20Snap/ohsnap.jpg" class="my_image" alt="oh snap!" /></a>
   </div>
     <h4>Celebration ensues after end of glue shortage.</h4>
     <p>
