background/direction change

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h3>
       Where can this wonderful world of adventure take you?
     </h3>
-      <div class="animal_rankings">
-        <a href="">Animal Rankings</a>
+      <div class="music">
+        <a href="">Music</a>
       </div>
-      <div class="You">
-        <a href="">You?</a>
+      <div class="art">
+        <a href="">Art</a>
       </div>
     </body>
 </html>
