--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       <div class="music">
         <a href="">Music</a>
       </div>
+<br />
       <div class="art">
         <a href="">Art</a>
       </div>
+<br />
+      <div class="events">
+        <a href="">Events</a>
+      </div>
+
     </body>
 </html>
