--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <div class="spaces">
     <h1>Hello, person - welcome to this place.</h1>
+    <!-- FareHarbor book button for item #40, availability #3576 -->
+<a href="http://local.fhbr.co:8000/embeds/book/partyparrotsparadise/items/40/availability/3576/book/?flow=29" onclick="return !(window.FH && FH.open({ shortname: 'partyparrotsparadise', fallback: 'simple', flow: 29, view: { item: 40, availability: 3576 } }));">Book online now!</a>
     <br />
     <h3>
       Where can this wonderful world of adventure take you?
@@ -23,6 +25,8 @@
       <div class="events">
         <a href="">Events</a>
       </div>
+      <!-- FareHarbor Lightframe API - do not remove - see: https://fareharbor.com/help/website/resources/lightframe-api/ -->
+<script src="http://local.fhbr.co:8000/embeds/api/v1/?autolightframe=yes"></script>
 
     </body>
 </html>
