--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <a href="">Events</a>
       </div>
       <!-- FareHarbor Lightframe API - do not remove - see: https://fareharbor.com/help/website/resources/lightframe-api/ -->
-<script src="http://local.fhbr.co:8000/embeds/api/v1/?autolightframe=yes"></script>
+<script src="https://fareharbor.com/embeds/api/v1/?autolightframe=yes"></script>
+
 
     </body>
 </html>
