add some better style

--- a/index.html
+++ b/index.html
@@ -8,25 +8,54 @@
   <body>
     <div class="spaces">
     <h1>Hello, person - welcome to this place.</h1>
-    <!-- FareHarbor book button for item #40, availability #3576 -->
-<a href="http://local.fhbr.co:8000/embeds/book/partyparrotsparadise/items/40/availability/3576/book/?flow=29" onclick="return !(window.FH && FH.open({ shortname: 'partyparrotsparadise', fallback: 'simple', flow: 29, view: { item: 40, availability: 3576 } }));">Book online now!</a>
+</div>
+
+<div style="width: 1200px;">
+  <script src="http://local.fhbr.co:8000/embeds/script/calendar/marble_eclipse_catography/?fallback=simple&full-items=yes"></script>
+</div>
+<div style="height: 80px">
+</div>
+<div style="width: 450px;">
+  <script src="http://local.fhbr.co:8000/embeds/script/calendar/marble_eclipse_catography/?fallback=simple&full-items=yes"></script>
+</div>
+<div style="height: 80px">
+</div>
+<script src="https://demo.fareharbor.com/embeds/script/items/forestadventures/?full-items=yes&fallback=simple&lightframe=no"></script>
+
+
+<script src="https://demo.fareharbor.com/embeds/script/items/mattschmitztester/?full-items=yes&fallback=simple&lightframe=no&flow=8516"></script>
+
+<!-- FareHarbor calendar -->
+<div style="width: 900px;">
+<script src="https://demo.fareharbor.com/embeds/script/calendar/forestadventures/?fallback=simple&full-items=yes"></script>
+
+
+<br>
+<br>
+<div>
+<a class="music" href="">Book online now!</a>
+</div>
+
     <br />
+<!-- FareHarbor book button for item #30602 -->
+<!-- FareHarbor book button for item #30602 -->
     <h3>
       Where can this wonderful world of adventure take you?
     </h3>
       <div class="music">
-        <a href="">Music</a>
+        <a href="">Button 1</a>
       </div>
 <br />
       <div class="art">
-        <a href="">Art</a>
+        <a href="">Button 2</a>
       </div>
 <br />
       <div class="events">
-        <a href="">Events</a>
+        <a href="">Button 3</a>
       </div>
-      <!-- FareHarbor Lightframe API - do not remove - see: https://fareharbor.com/help/website/resources/lightframe-api/ -->
-<script src="http://local.fhbr.co:8000/embeds/api/v1/?autolightframe=yes"></script>
+<!-- FareHarbor Lightframe API - do not remove - see: https://fareharbor.com/help/website/resources/lightframe-api/ -->
+<script src="https://demo.fareharbor.com/embeds/api/v1/?autolightframe=yes"></script>
+
 
 
 
